--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "ethers": "^6.2.0",
     "next": "13.2.4",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.9.0",
     "typescript": "4.9.5"
   }
 }
