--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "ethers": "^6.2.0",
+    "langchain": "^0.0.41",
     "next": "13.2.4",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
