--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.9.0",
+    "serpapi": "^1.1.1",
     "typescript": "4.9.5"
   }
 }
