--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.15.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "ethers": "^6.2.0",
