--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@types/amplitude-js": "^8.16.2",
     "@types/node": "18.15.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "amplitude-js": "^8.21.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "ethers": "^6.2.0",
