--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
       "@services/*": ["./src/services/*"],
       "@assets/*": ["./src/assets/*"],
       "@mocks/*": ["./src/mocks/*"],
-      "@types": ["./src/types/index.tsx"]
+      "@types": ["./src/types/index.tsx"],
+      "@constants": ["./src/constants/index.ts"],
+      "@apis/*": ["./src/apis/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/assets/index.js"],
