--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@emotion/styled": "^11.10.6",
     "@types/amplitude-js": "^8.16.2",
     "@types/node": "18.15.1",
-    "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "amplitude-js": "^8.21.7",
     "axios": "^1.3.5",
@@ -28,5 +27,9 @@
     "react-router-dom": "^6.9.0",
     "serpapi": "^1.1.1",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/react": "18.0.28",
+    "css": "link:@types/@emotion/css"
   }
 }
