--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "next": "13.2.4",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "redux": "^4.2.1",
     "serpapi": "^1.1.1",
     "typescript": "4.9.5"
   },
